--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "sylius/core": "^0.19.0"
+        "sylius/core": "^0.19.0",
+        "symfony/var-dumper": "^3.1"
     }
 }
